--- a/Strezless Musick Milestones/2022-01-04-04-12-47.md
+++ b/Strezless Musick Milestones/2022-01-04-04-12-47.md
@@ -6,14 +6,13 @@ modified: 2022-01-04T04:22:58-06:00
 # metadata for Sin Estres who is legally Omar Dejesu Orrantia
 
 "Omar Dejesu Orrantia"="Sin Estres"
-Born in Van Nuys California on November 23 of the year 1986 
-
-ORRANTIA OMAR DEJESU   BMI	00836305443
+Born in Van Nuys California on November 23 of the year 1986
 _________________________________________________
-    Performing Rights Organization for music rights said (Omar D. Orrantia A.K.A. Sin Estres) artist registered on is BMI   -------    
-ORRANTIA OMAR DEJESU MR 550507345 	
+ORRANTIA OMAR DEJESU MR 550507345 as per [BMI](https://www.bmi.com)
+Performing Rights Organization for music rights said (Omar D. Orrantia A.K.A. Sin Estres) artist registered on is BMI   -------    
 
 [Sin Estres Songview link](https://repertoire.bmi.com/Search/Catalog?num=o2nWqU1lv492k2CSczXDNQ%253d%253d&cae=ufrPgSzM1vdzwOiaX0MGMA%253d%253d&partType=WriterList&search=%7B%22Main_Search_Text%22%3A%22Sin%20Estres%22%2C%22Sub_Search_Text%22%3A%22%22%2C%22Main_Search%22%3A%22Catalog%22%2C%22Sub_Search%22%3Anull%2C%22Search_Type%22%3A%22all%22%2C%22View_Count%22%3A20%2C%22Page_Number%22%3A1%2C%22Part_Type%22%3A%22WriterList%22%2C%22Part_Id%22%3A%22o2nWqU1lv492k2CSczXDNQ%253d%253d%22%2C%22Part_Id_Sub%22%3Anull%2C%22Part_Name%22%3Anull%2C%22Part_Cae%22%3Anull%2C%22Original_Search%22%3A%22Performer%22%2C%22DisclaimerViewed%22%3Anull%7D&resetPageNumber=True&partIdSub=YO0HedHMatLb45JzS23DVw%253d%253d) which is **"A combined view of ASCAP and BMI"** as per sites statement  you can find the artist at the following link as well Sin EstresSongview
+
 ________________________________________________
     
  [Sin Estres the Latin Hip Hop indie artist YouTube Channel](https://www.youtube.com/c/SinEstresOrrantia)
